# mqlite

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DRIVER.md  README.md
.github/workflows/: ci.yml
capabilities/mongodb/: upstream-capabilities.generated.json
capabilities/mqlite/: gap-analysis.generated.json  gap-analysis.generated.md  support.generated.json
crates/mqlite/: Cargo.toml
crates/mqlite-bson/: Cargo.toml
crates/mqlite-bson/src/: lib.rs
crates/mqlite-capabilities/: Cargo.toml
crates/mqlite-capabilities/src/: catalog.rs  lib.rs  main.rs
crates/mqlite-catalog/: Cargo.toml
crates/mqlite-catalog/benches/: insert_many_unique.rs
crates/mqlite-catalog/src/: catalog.rs  lib.rs
crates/mqlite-debug/: Cargo.toml
crates/mqlite-debug/src/: lib.rs
crates/mqlite-exec/: Cargo.toml
crates/mqlite-exec/src/: lib.rs
crates/mqlite-ipc/: Cargo.toml
crates/mqlite-ipc/src/: lib.rs
crates/mqlite-query/: Cargo.toml
crates/mqlite-query/src/: capabilities.rs  error.rs  expression.rs  filter.rs  lib.rs  pipeline.rs  projection.rs  tests.rs  types.rs  update.rs
crates/mqlite-server/: Cargo.toml
crates/mqlite-server/src/: broker.rs  lib.rs
crates/mqlite-storage/: Cargo.toml
crates/mqlite-storage/benches/: reopen_existing.rs
crates/mqlite-storage/src/: database.rs  engine.rs  lib.rs
crates/mqlite-storage/src/v2/: btree.rs  catalog.rs  checkpoint.rs  engine.rs  keycodec.rs  layout.rs  mod.rs  page.rs  pager.rs  recovery.rs  wal.rs
crates/mqlite-wire/: Cargo.toml
crates/mqlite-wire/src/: lib.rs
crates/mqlite/src/: main.rs
crates/mqlite/tests/: cli.rs
