[package]
name = "mqlite-bson"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bson.workspace = true
proptest = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
proptest.workspace = true
