[package]
name = "mqlite-query"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bson.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
mqlite-bson = { path = "../mqlite-bson" }
md-5.workspace = true
regex.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
