[package]
name = "mqlite-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bson.workspace = true
mqlite-bson = { path = "../mqlite-bson" }
mqlite-catalog = { path = "../mqlite-catalog" }
mqlite-exec = { path = "../mqlite-exec" }
mqlite-ipc = { path = "../mqlite-ipc" }
mqlite-query = { path = "../mqlite-query" }
mqlite-storage = { path = "../mqlite-storage" }
mqlite-wire = { path = "../mqlite-wire" }
parking_lot.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
