[package]
name = "mqlite-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bson.workspace = true
mqlite-bson = { path = "../mqlite-bson" }
mqlite-catalog = { path = "../mqlite-catalog" }
mqlite-debug = { path = "../mqlite-debug" }
mqlite-exec = { path = "../mqlite-exec" }
mqlite-ipc = { path = "../mqlite-ipc" }
mqlite-query = { path = "../mqlite-query" }
mqlite-storage = { path = "../mqlite-storage" }
mqlite-wire = { path = "../mqlite-wire" }
parking_lot.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "=0.2.182"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
