[package]
name = "mqlite-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
bson.workspace = true
ciborium.workspace = true
fs4.workspace = true
mqlite-catalog = { path = "../mqlite-catalog" }
serde.workspace = true
thiserror.workspace = true
zstd.workspace = true

[dev-dependencies]
criterion.workspace = true
mqlite-catalog = { path = "../mqlite-catalog" }
tempfile.workspace = true

[[bench]]
name = "reopen_existing"
harness = false
