[package]
name = "mqlite-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bson.workspace = true
bytes.workspace = true
mqlite-debug = { path = "../mqlite-debug" }
mqlite-bson = { path = "../mqlite-bson" }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
