[package]
name = "mqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
mqlite-server = { path = "../mqlite-server" }
mqlite-storage = { path = "../mqlite-storage" }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
