[package]
name = "mqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bson.workspace = true
clap.workspace = true
mqlite-ipc = { path = "../mqlite-ipc" }
mqlite-server = { path = "../mqlite-server" }
mqlite-storage = { path = "../mqlite-storage" }
mqlite-wire = { path = "../mqlite-wire" }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
